    update thumbnail being copied after last write with delay #508 #591
    new Pref option and builtin Style/toolbar item Show Folder Sizes #582
    new socket property show_dirsize #582
    update lang cs it lt ru sr sr@latin sv tr #582
    update lang fr it ja el pl bg pt_BR lt es id ru de uk cs sv
    pull transifex lang it ja pl tr uk; add release po check
1.0.5+next
    Rename dlg canonicalize Copy Target/Link Target target when possible
    [installer] fix mktemp template and error handling for busybox #629
    [GTK2] fix black background dir load regression 888a7735 #578 #627
    [GTK3.20] fix theme parse warnings re close btn css #636
    [GTK2] iconview no longer responds to theme change #627
    Fix compilation failure due to glibc include changes #678
    update copyright, email in README, release, about-dlg.ui
    [installer] use newer package names libx11-dev libudev1; failsafe
    user manual minor updates #681
    remove from ptk-clipboard.c:  #include <stdlib.h> (was for realpath)
    default Devices|Root|Check fsck command add -r for repair
    File|Open URL add example mtp://
    release script add msgfmt po check
    add sftp to ssh protocol handler default whitelist (allows sftp://) #700
    settings.c:1930: (style) Clarify expression with parentheses #659
    fix segfault in ptk/ptk-dir-tree.c:430  #698
    fix newly imported file handlers appear in Plugins menu #688
    fix 1.0.2 708f0988 regression: Dbl-click to enter dir selects file #702
    fix segfault when dragging folder or file on desktop #654 [Teklad]
    [desktop] fix GTK3 icon movement, reliably get mouse state Teklad/spacefm#1
    load icon using icon name in theme if removed suffix fails #647 [Teklad]
    [desktop] Paint root window when there is no wallpaper #404 [Teklad]
    fix source file permissions [Teklad]
    fixed/added translations to pl.po [grimi via Teklad] Teklad/spacefm#5
    [GTK3.22] fix segfault dragging files to dir tree #649 #670 [Teklad]